--- a/src/Busybee/HomeBundle/Resources/views/Menu/main-menu.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Menu/main-menu.html.twig
@@ -12,13 +12,11 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="{{ path('busybee_home_page') }}">{% block projectname %}Busybee{% endblock %}</a>
+			<a class="navbar-brand" href="{{ path('home_page') }}">{% block projectname %}Busybee{% endblock %}</a>
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
 		<ul class="nav navbar-nav">
-			<li{% if app.request.get('_route') == 'admin' %} class="active"{% endif %}><a href="{{ path('busybee_admin') }}">{{ 'Admin'| trans }}</a></li>
-			<li{% if app.request.get('_route') == 'contact' %} class="active"{% endif %}><a href="{{ path('busybee_contact') }}">{{ 'Contact'| trans }}</a></li>
-			{% include "BusybeeDisplayBundle:Menu:site-menu.html.twig" %}			
+			{% include "BusybeeHomeBundle:Menu:site-menu.html.twig" %}			
 {% if is_granted('ROLE_USER') %}
 				{% if is_granted('ROLE_PREVIOUS_ADMIN') %}
 					<li><a href="{{ path('busybee_home_page', {'_switch_user': '_exit'}) }}">Exit Impersonation of: {{ app.user.username }}</a></li>
@@ -28,7 +26,7 @@
 				</ul>
 {% else %}
 		</ul>
-		{% include 'BusybeeDisplayBundle:Menu:sign-in-form.html.twig' %}
+		{% include 'BusybeeHomeBundle:Menu:sign-in-form.html.twig' %}
 {% endif %}
 		</div><!--/.navbar-collapse -->
 	</div>
