--- a/src/Busybee/SecurityBundle/Resources/views/Security/login.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/Security/login.html.twig
@@ -1,15 +1,13 @@
 {# src/General/SecurityBundle/Resources/views/Security/login.html.twig #}
-{% extends "BusybeeSecurityBundle::layout.html.twig" %}
+{% extends "BusybeeHomeBundle:Default:index.html.twig" %}
 
 {% trans_default_domain 'BusybeeSecurityBundle' %}
-{% block title %}{{ parent() }}{{ 'security.login.title'|trans }}{% endblock title %}
-{% block titleBlock %}
-	<div class="jumbotron">
-		<h1>{{ 'security.login.title'|trans }}</h1>
-			<p class="lead">{{ 'security.login.description'|trans }}</p>
-	</div>
+{% block title %}Busybee - {{ 'security.login.title'|trans }}{% endblock title %}
+{% block headerTitle %}{{ 'security.login.title'|trans }}{% endblock headerTitle %}
+{% block headerLead %}{{ 'security.login.description'|trans }}{% endblock headerLead %}
 
-{% endblock titleBlock %}
+
 {% block SecurityBundleContent %}
-{% include "BusybeeSecurityBundle:Security:login_content.html.twig" %}
+{% block contentContainer %}
+{% include "BusybeeSecurityBundle:Security:login_content.html.twig" %}{% endblock contentContainer %}
 {% endblock SecurityBundleContent  %}
