--- a/src/Busybee/SecurityBundle/Resources/views/User/impersonate_content.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/impersonate_content.html.twig
@@ -1,11 +1,10 @@
 {# src/General/SecurityBundle/Profile/impersonate_content.html.twig #}
 {% trans_default_domain 'BusybeeSecurityBundle' %}
 
-
 <div class="row marketing">
 	<div class="col-lg-12">
 	{% for iu in users %}
-	<p><a class="btn btn-default" role="button" href="{{ path('busybee_home_page') }}?_switch_user={{ iu.name }}" target="_self">{{ iu.name }} [{{ iu.email }}]</a></p>
+	<p><a class="btn btn-default" role="button" href="{{ path('home_page') }}?_switch_user={{ iu.name }}" target="_self">{{ iu.name }} [{{ iu.email }}]</a></p>
 	{% endfor %}
 	</div>
 </div>
