--- a/src/Busybee/SecurityBundle/Resources/views/User/request.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/request.html.twig
@@ -1,15 +1,15 @@
 {# src/General/SecurityBundle/Resources/views/User/request.html.twig #}
-{% extends "BusybeeSecurityBundle::layout.html.twig" %}
+{% extends "BusybeeHomeBundle:Default:index.html.twig" %}
 
 
 {% trans_default_domain 'BusybeeSecurityBundle' %}
-{% block title %}{{ parent() }}{{ 'security.request.title'|trans }}{% endblock title %}
-{% block titleBlock %}
-<div class="jumbotron">
-	<h1>{{ 'security.request.title'|trans }}</h1>
-	<p>{{ 'security.request.description'|trans }}</p>
-</div>
-{% endblock titleBlock %}
+
+{% block title %}Busybee - {{ 'security.request.title'|trans }}{% endblock title %}
+{% block headerTitle %}{{ 'security.request.title'|trans }}{% endblock headerTitle %}
+{% block headerLead %}{{ 'security.request.description'|trans }}{% endblock headerLead %}
+
+
 {% block SecurityBundleContent %}
-{% include "BusybeeSecurityBundle:User:request_content.html.twig" %}
-{% endblock SecurityBundleContent %}
+{% block contentContainer %}
+{% include "BusybeeSecurityBundle:User:request_content.html.twig" %}{% endblock contentContainer %}
+{% endblock SecurityBundleContent  %}
