--- a/src/Busybee/SecurityBundle/Resources/views/layout.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/layout.html.twig
@@ -23,7 +23,7 @@
 			{% if is_granted('ROLE_USER') %}<li><a href="{{ path("busybee_security_user_edit") }}">Update User: {{ app.user.username }}</a></li> {% endif %}
 			{% if is_granted('ROLE_ADMIN') %}<li><a href="{{ path("busybee_security_user_register") }}">Register</a></li>{% endif %}
 			{% if is_granted('ROLE_PREVIOUS_ADMIN') %}
-				<li><a href="{{ path('busybee_home_page', {'_switch_user': '_exit'}) }}">Exit impersonation</a></li>
+				<li><a href="{{ path('home_page', {'_switch_user': '_exit'}) }}">Exit impersonation</a></li>
 				<li><a href="{{ path("busybee_security_user_reset_request") }}">Reset Password</a></li>
 			{% else %}
 				{% if is_granted('ROLE_ALLOWED_TO_SWITCH') %}
@@ -58,7 +58,7 @@
 
 		</ul>
 	</nav>
-	<h3 class="text-muted"><a href="{{ path('busybee_home_page') }}">{% block projectname %}Busybee{% endblock projectname %}</a></h3>
+	<h3 class="text-muted"><a href="{{ path('home_page') }}">{% block projectname %}Busybee{% endblock projectname %}</a></h3>
 </div>
 {% endblock menuBar %}
 
