--- a/src/Busybee/SystemBundle/Resources/views/Install/start.html.twig
+++ b/src/Busybee/SystemBundle/Resources/views/Install/start.html.twig
@@ -13,7 +13,9 @@
 {% block headerTitle %}{{ 'system.install.title'|trans }}{% endblock headerTitle %}
 {% block headerLead %}{{ 'system.install.description'|trans }}{% endblock headerLead %}
 
-
+{% block menuContainer %}
+	{{ include('BusybeeHomeBundle:Menu:empty-menu.html.twig') }}
+{% endblock menuContainer %}
 
 {% block contentContainer %}
 
@@ -66,66 +68,89 @@
 
 
 </div>
-<div class="row">
-	<div class="col-sm-12">
-		<h3>Database Connection Parameters</h3>
-	</div>
-</div>
-<form action="{{ path("install_save_database_parameters") }}" method="post">
-	<div id="form_body" class="container-fluid">
-		<div class="row">
-			<div class="well col-sm-6 form-group">
-				<label for="driver">{{ 'sql.database.driver.title'|trans }}</label><br />
-				<span>{{ 'sql.database.driver.description'|trans }}</span>
-				<select id="driver" name="driver" value="{{ config.sql.database_driver }}" required class="form-control">
-					<option value='pdo_mysql'>pdo_mysql</option>
-				</select>
-				<input type="hidden" name="_csrf_token" value="{{ csrf_token('database') }}" />
-			</div>
-			<div class="well col-sm-6 form-group">
-				<label for="host">{{ 'sql.database.host.title'|trans }}</label><br />
-				<span>{{ 'sql.database.host.description'|trans }}</span>
-				<input type="text" id="host" name="host" value="{{ config.sql.database_host }}" required class="form-control" >
-			</div>
-		</div>
-		
-		<div class="row">
-			<div class="well col-sm-6 form-group">
-				<label for="port">{{ 'sql.database.port.title'|trans }}</label><br />
-				<span>{{ 'sql.database.port.description'|trans }}</span>
-				<input type="number" id="port" name="port" value="{{ config.sql.database_port }}" class="form-control" >
-			</div>
-			<div class="well col-sm-6 form-group">
-				<label for="name">{{ 'sql.database.name.title'|trans }}</label><br />
-				<span>{{ 'sql.database.name.description'|trans }}</span>
-				<input type="text" id="name" name="name" value="{{ config.sql.database_name }}" required class="form-control" >
-			</div>
-		</div>
-		
-		<div class="row">
-			<div class="well col-sm-6 form-group">
-				<label for="user">{{ 'sql.database.user.title'|trans }}</label><br />
-				<span>{{ 'sql.database.user.description'|trans }}</span>
-				<input type="text" id="user" name="user" value="{{ config.sql.database_user }}" required class="form-control" >
-			</div>
-			<div class="well col-sm-6 form-group">
-				<label for="password">{{ 'sql.database.password.title'|trans }}</label><br />
-				<span>{{ 'sql.database.password.description'|trans }}</span>
-				<input type="text" id="password" name="password" value="{{ config.sql.database_password }}" required class="form-control" >
-			</div>
-		</div>
-		
-		<div class="row">
-			<div class="well col-sm-6 form-group">
-				<label for="prefix">{{ 'sql.database.prefix.title'|trans }}</label><br />
-				<span>{{ 'sql.database.prefix.description'|trans }}</span>
-				<input type="text" id="prefix" name="prefix" value="{{ config.sql.database_prefix }}" required class="form-control" maxlength="6" >
-			</div>
-			<div class="well col-sm-6 form-group text-right">
-				<button type="submit" id="_submit" name="_submit" class="btn btn-success">{{ 'sql.database.save'|trans }}<span class="glyphicons glyphicons-disk-save"></span></button>
-			</div>
+
+{% if config.sql.isConnected %}
+	<div class="row">
+		<div class="col-sm-12">
+			<h2>{{ 'install.database.parameters'|trans }}</h2>
 		</div>
 	</div>
-</form>	
-{{ dump(config) }}
+	<form action="{{ path("install_check_mailer_parameters") }}" method="post">
+		<div id="form_body" class="container-fluid">
+			
+			<div class="row">
+				<div class="well col-sm-6 form-group">
+					<p>{{ 'install.database.connection.complete'|trans }}</p>
+					<input type="hidden" name="_csrf_token" value="{{ csrf_token('mailer') }}" />
+				</div>
+				<div class="well col-sm-6 form-group text-right">
+					<button type="submit" id="_submit" name="_submit" class="btn btn-info">{{ 'install.proceed'|trans }}<span class="glyphicons glyphicons-hand-right"></span></button>
+				</div>
+			</div>
+		</div>
+	</form>	
+{% else %}
+	<div class="row">
+		<div class="col-sm-12">
+			<h2>{{ 'install.database.parameters'|trans }}</h2>
+		</div>
+	</div>
+	<form action="{{ path("install_save_database_parameters") }}" method="post">
+		<div id="form_body" class="container-fluid">
+			<div class="row">
+				<div class="well col-sm-6 form-group">
+					<label for="driver">{{ 'sql.database.driver.title'|trans }}</label><br />
+					<span>{{ 'sql.database.driver.description'|trans }}</span>
+					<select id="driver" name="driver" value="{{ config.sql.database_driver }}" required class="form-control">
+						<option value='pdo_mysql'>pdo_mysql</option>
+					</select>
+					<input type="hidden" name="_csrf_token" value="{{ csrf_token('database') }}" />
+				</div>
+				<div class="well col-sm-6 form-group">
+					<label for="host">{{ 'sql.database.host.title'|trans }}</label><br />
+					<span>{{ 'sql.database.host.description'|trans }}</span>
+					<input type="text" id="host" name="host" value="{{ config.sql.database_host }}" required class="form-control" >
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="well col-sm-6 form-group">
+					<label for="port">{{ 'sql.database.port.title'|trans }}</label><br />
+					<span>{{ 'sql.database.port.description'|trans }}</span>
+					<input type="number" id="port" name="port" value="{{ config.sql.database_port }}" class="form-control" >
+				</div>
+				<div class="well col-sm-6 form-group">
+					<label for="name">{{ 'sql.database.name.title'|trans }}</label><br />
+					<span>{{ 'sql.database.name.description'|trans }}</span>
+					<input type="text" id="name" name="name" value="{{ config.sql.database_name }}" required class="form-control" >
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="well col-sm-6 form-group">
+					<label for="user">{{ 'sql.database.user.title'|trans }}</label><br />
+					<span>{{ 'sql.database.user.description'|trans }}</span>
+					<input type="text" id="user" name="user" value="{{ config.sql.database_user }}" required class="form-control" >
+				</div>
+				<div class="well col-sm-6 form-group">
+					<label for="password">{{ 'sql.database.password.title'|trans }}</label><br />
+					<span>{{ 'sql.database.password.description'|trans }}</span>
+					<input type="text" id="password" name="password" value="{{ config.sql.database_password }}" required class="form-control" >
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="well col-sm-6 form-group">
+					<label for="prefix">{{ 'sql.database.prefix.title'|trans }}</label><br />
+					<span>{{ 'sql.database.prefix.description'|trans }}</span>
+					<input type="text" id="prefix" name="prefix" value="{{ config.sql.database_prefix }}" required class="form-control" maxlength="6" >
+				</div>
+				<div class="well col-sm-6 form-group text-right">
+					<button type="submit" id="_submit" name="_submit" class="btn btn-success">{{ 'sql.database.save'|trans }}<span class="glyphicons glyphicons-disk-save"></span></button>
+				</div>
+			</div>
+		</div>
+	</form>	
+{% endif %}
+
 {% endblock contentContainer %}
