--- a/src/Busybee/SecurityBundle/Resources/views/User/edit_content.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/edit_content.html.twig
@@ -2,41 +2,48 @@
 
 {% trans_default_domain 'BusybeeSecurityBundle' %}
 
-<div class="row marketing">
-	<div class="col-lg-12">
+{% form_theme form "BusybeeFormBundle:Template:bootstrap.html.twig" %}
 
-		<div class="row well">
-			{{ form_row(form.email) }}
-		</div>
-		<div class="row well">
-			{{ form_row(form.username) }}
-		</div>
-		{% if is_granted('ROLE_REGISTRAR') %}
-		<div class="row well">
-			{{ form_row(form.groups) }}
-		</div> 
-		{% else %}
-			{% do form.groups.setRendered %}
-			{% do form.directroles.setRendered %}
-		{% endif %}
-		{% if form.current_password is defined %}
-		<div class="row well">
-			{{ form_row(form.current_password) }}
-		</div>
-		{% endif %}
-		{% if is_granted('ROLE_REGISTRAR') %}
-		<div class="form-group well">
-			{{ form_row(form.directroles) }}
-		</div>  
-		{% endif %}
-		<div class="form-group well text-center">
-			{{ form_widget(form.save) }}
-			{{ form_widget(form.cancel) }}
-		</div>
+{{ include('BusybeeHomeBundle:Default:flash.html.twig') }}
 
+<div class="row">
+	<div class="col-sm-6 well">
+		{{ form_errors(form.email) }}
+		{{ form_row(form.email) }}
+	</div>
+	<div class="col-sm-6 well">
+		{{ form_row(form.username) }}
 	</div>
 </div>
 
-
-
-
+{% if is_granted('ROLE_REGISTRAR') %}
+<div class="row">
+	<div class="col-sm-6 well">
+		{{ form_row(form.groups) }}
+	</div>
+	<div class="col-sm-6 well">
+		{{ form_row(form.directroles) }}
+	</div>
+</div>
+{% else %}
+	{% do form.groups.setRendered %}
+	{% do form.directroles.setRendered %}
+{% endif %}
+{% if form.current_password is defined %}
+<div class="row">
+	<div class="col-sm-6 well">
+		{{ form_row(form.current_password) }}
+	</div>
+	<div class="col-sm-6 well text-right">
+		{{ form_widget(form.save) }}
+		{{ form_widget(form.cancel) }}
+	</div>
+</div>
+{% else %}
+<div class="row">
+	<div class="col-sm-6 col-sm-offset-6 well text-right">
+		{{ form_widget(form.save) }}
+		{{ form_widget(form.cancel) }}
+	</div>
+</div>
+{% endif %}
