--- a/web/css/main.css
+++ b/web/css/main.css
@@ -23,3 +23,8 @@ body {
 	border-radius: 10px; 
 	box-shadow: 2px 2px 15px rgba(0,0,0,0.75);
 }
+.field-help {
+	font-style: italic;
+	font-size: 85% ;
+	color: #3DB3D7;
+}
