password settings and enter admin credentials before build.

--- a/src/Busybee/SecurityBundle/Resources/views/User/request.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/request.html.twig
@@ -9,7 +9,6 @@
 {% block headerLead %}{{ 'security.request.description'|trans }}{% endblock headerLead %}
 
 
-{% block SecurityBundleContent %}
 {% block contentContainer %}
-{% include "BusybeeSecurityBundle:User:request_content.html.twig" %}{% endblock contentContainer %}
-{% endblock SecurityBundleContent  %}
+{% include "BusybeeSecurityBundle:User:request_content.html.twig" %}
+{% endblock contentContainer %}
