--- a/src/Busybee/HomeBundle/Resources/views/Menu/sign-in-form.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Menu/sign-in-form.html.twig
@@ -2,27 +2,29 @@
 
 {% trans_default_domain "BusybeeHomeBundle" %}
 
-{% if config.signin and not is_granted('ROLE_USER') %}
-<form class="navbar-form navbar-right" action="{{ path('busybee_security_check') }}" method="post">
-	<div class="form-group">
-		<input type="text" id="username" class="form-control input-sm" name="_username" value="{{ last_username|default("") }}" placeholder="{{ 'Username/Email'|trans }}" />
-	</div>
-	<div class="form-group">
-		<input type="password" id="password" name="_password" class="form-control input-sm" placeholder="{{ 'Password'|trans }}" />
-	</div>
-	<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
-	<button type="submit" class="btn btn-success">{{ 'Sign In'|trans }}</button>
-</form>  
-{% elseif config.signin is null %}
-	&nbsp;
-{% elseif config.signin and is_granted('ROLE_USER') %}
-	<form class="navbar-form navbar-right">
+{% if config.signin is defined %}
+	{% if config.signin and not is_granted('ROLE_USER') %}
+	<form class="navbar-form navbar-right" action="{{ path('busybee_security_check') }}" method="post">
 		<div class="form-group">
-			{% if is_granted('ROLE_PREVIOUS_ADMIN') %}
-				<a class="btn btn-info" href="{{ path('home_page', {'_switch_user': '_exit'}) }}" role="button">{{ 'Exit Impersonation of'|trans }}: {{ app.user.username }}</a>
-			{% endif %}
-			<a class="btn btn-danger" href="{{ path('busybee_security_logout') }}" role="button">{{ 'Sign Out'|trans }}</a>
+			<input type="text" id="username" class="form-control input-sm" name="_username" value="{{ last_username|default("") }}" placeholder="{{ 'Username/Email'|trans }}" />
 		</div>
-	</form>
+		<div class="form-group">
+			<input type="password" id="password" name="_password" class="form-control input-sm" placeholder="{{ 'Password'|trans }}" />
+		</div>
+		<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
+		<button type="submit" class="btn btn-success">{{ 'Sign In'|trans }}</button>
+	</form>  
+	{% elseif config.signin is null %}
+		&nbsp;
+	{% elseif config.signin and is_granted('ROLE_USER') %}
+		<form class="navbar-form navbar-right">
+			<div class="form-group">
+				{% if is_granted('ROLE_PREVIOUS_ADMIN') %}
+					<a class="btn btn-info" href="{{ path('home_page', {'_switch_user': '_exit'}) }}" role="button">{{ 'Exit Impersonation of'|trans }}: {{ app.user.username }}</a>
+				{% endif %}
+				<a class="btn btn-danger" href="{{ path('busybee_security_logout') }}" role="button">{{ 'Sign Out'|trans }}</a>
+			</div>
+		</form>
+	{% endif %}
 {% endif %}
 
