--- a/src/Busybee/SecurityBundle/Resources/views/User/checkEmail.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/checkEmail.html.twig
@@ -1,16 +1,18 @@
-{% extends "BusybeeSecurityBundle::layout.html.twig" %}
+{% extends "BusybeeHomeBundle:Default:index.html.twig" %}
 
 {% trans_default_domain 'BusybeeSecurityBundle' %}
+
 {% block title %}{{ parent() }}{{ 'security.resetting.title'|trans }}{% endblock title %}
-{% block titleBlock %}
-<div class="jumbotron">
-	<h1>{{ 'security.resetting.title'|trans }}</h1>
-</div>
-{% endblock titleBlock %}
-{% block SecurityBundleContent %}
-<div class="row marketing">
-	<div class="col-lg-12 alert alert-success">
-		<p class="lead">{{ 'security.resetting.check_email'|trans({'%email%': email}) }}</p>
+{% block headerTitle %}{{ 'security.resetting.title'|trans }}{% endblock headerTitle %}
+{% block headerLead %}{% endblock headerLead %}
+
+
+{% block contentContainer %}
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="alert alert-success">
+				<p class="lead">{{ 'security.resetting.check_email'|trans({'%email%': email}) }}</p>
+			</div>
+		</div>
 	</div>
-</div>
-{% endblock SecurityBundleContent %}
+{% endblock contentContainer %}
