--- a/src/Busybee/SystemBundle/Resources/views/Install/misc.html.twig
+++ b/src/Busybee/SystemBundle/Resources/views/Install/misc.html.twig
@@ -61,16 +61,111 @@
 				<input type="text" id="country" name="country" value="{{ config.misc.country }}" required class="form-control" />
 			</div>
 		</div>
+
+		<div class="row">
+			<h3>{{ 'misc.password.title'|trans }}</h3>
+			<p>{{ 'misc.password.message'|trans }}</p>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-6 well form-group">
+				<label for="minLength">{{ 'misc.password.minLength.title'|trans }}</label><br />
+				<span>{{ 'misc.password.minLength.description'|trans }}</span>
+				<input type="number" id="minLength" name="minLength" value="{{ config.misc.password.minLength }}" required class="form-control" min='6' max='25' step='1' />
+			</div>
+			<div class="col-sm-6 well form-group">
+				<label for="numbers">{{ 'misc.password.numbers.title'|trans }}</label><br />
+				<span>{{ 'misc.password.numbers.description'|trans }}</span>
+				<div class="text-right">
+				<input type="checkbox" id="numbers" name="numbers" {{ config.misc.password.numbers }} class="form-control" data-off-label="false" data-on-label="false" data-off-icon-cls="glyphicon-thumbs-down" data-on-icon-cls="glyphicon-thumbs-up" />
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-6 well form-group">
+				<label for="mixedCase">{{ 'misc.password.mixedCase.title'|trans }}</label><br />
+				<span>{{ 'misc.password.mixedCase.description'|trans }}</span>
+				<div class="text-right">
+				<input type="checkbox" id="mixedCase" name="mixedCase" {{ config.misc.password.mixedCase }} class="form-control" data-off-label="false" data-on-label="false" data-off-icon-cls="glyphicon-thumbs-down" data-on-icon-cls="glyphicon-thumbs-up" />
+				</div>
+			</div>
+			<div class="col-sm-6 well form-group">
+				<label for="specials">{{ 'misc.password.specials.title'|trans }}</label><br />
+				<span>{{ 'misc.password.specials.description'|trans }}</span>
+				<div class="text-right">
+				<input type="checkbox" id="specials" name="specials" {{ config.misc.password.specials }} class="form-control" data-off-label="false" data-on-label="false" data-off-icon-cls="glyphicon-thumbs-down" data-on-icon-cls="glyphicon-thumbs-up" />
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<h3>{{ 'misc.user.title'|trans }}</h3>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-6 well form-group">
+				<label for="email">{% trans from "BusybeeSecurityBundle" %}user.label.email{% endtrans %}</label><br />
+				<span>{{ 'misc.email.description'|trans }}</span>
+				<input type="email" id="email" name="email" value="{{ config.misc.email }}" required class="form-control" maxlength='75' />
+			</div>
+			<div class="col-sm-6 well form-group">
+				<label for="username">{% trans from "BusybeeSecurityBundle" %}user.label.username{% endtrans %}</label><br />
+				<span>{% trans from "BusybeeSecurityBundle" %}user.help.username{% endtrans %}</span>
+				<input type="text" id="username" name="username" value="{{ config.misc.username }}" class="form-control" maxlength='75' />
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="well col-sm-6 form-group">
+				<label for="password1">{{ 'misc.password1.title'|trans }}</label><br />
+				<span>{{ 'misc.password1.description'|trans }}</span>
+				<input type="password" title="{{ 'misc.password1.message'|trans ({'%minLength%': config.misc.password.minLength, '%numbers%': config.misc.password.numbers, '%mixedCase%': config.misc.password.mixedCase, '%specials%': config.misc.password.specials }) }}" id="password1" name="password1" value="{{ config.misc.password1 }}" required pattern="{{ config.misc.password.pattern }}" class="form-control"  onchange="this.setCustomValidity(this.validity.patternMismatch ? this.title : '');
+  if(this.checkValidity()) form.password2.pattern = this.value;
+  " />
+			</div>
+			<div class="well col-sm-6 form-group">
+				<label for="password2">{{ 'misc.password2.title'|trans }}</label><br />
+				<span>{{ 'misc.password2.description'|trans }}</span>
+				<input type="password" title="{{ 'misc.password2.message'|trans }}" id="password2" name="password2" value="{{ config.misc.password2 }}" required pattern="{{ config.misc.password.pattern }}" class="form-control" onchange="
+  this.setCustomValidity(this.validity.patternMismatch ? this.title : '');
+" />
+			</div>
+		</div>
 		
 		<div class="row">
-			<div class="well col-sm-offset-6 col-sm-6 form-group text-right">
+			<div class="well col-sm-6 form-group text-right">
+				<button type="button" id="generatePassword" name="generatePassword" class="btn btn-info">{{ 'misc.password1.generate'|trans }}</button>
+			</div>
+			<div class="well col-sm-6 form-group text-right">
 				<input type="hidden" name="_csrf_token" value="{{ csrf_token('miscellaneous') }}" />
 				<button type="submit" id="_submit" name="_submit" class="btn btn-success">{{ 'mailer.save'|trans }}<span class="glyphicons glyphicons-disk-save"></span></button>
 				{% if config.proceed %}
-				<button type="button" onClick="window.open('{{ path("install_build_system") }}','_self')" name="_submit" id="proceedButton" class="btn btn-info">{{ 'install.proceed'|trans }}<span class="glyphicons glyphicons-hand-right"></span></button>
+				<button type="button" onClick="window.open('{{ path('install_build_system') }}','_self')" name="_submit" id="proceedButton" class="btn btn-info">{{ 'install.proceed'|trans }}<span class="glyphicons glyphicons-hand-right"></span></button>
 				{% endif %}
 			</div>
 		</div>
 	</div>
 </form>	
+
 {% endblock contentContainer %}
+
+
+{% block javascripts %}
+	{{ parent() }}
+	<script type="text/javascript">
+		$("#generatePassword").click(function(){
+			$('input[name="password1"]').val('{{ config.misc.password.text|raw }}');
+			$('input[name="password1"]').get(0).type = "text";
+			$('input[name="password1"]').blur(function() {
+				$('input[name="password1"]').get(0).type = "password";
+			});
+			$('input[name="password2"]').val('{{ config.misc.password.text|raw }}');
+			alert("{{ 'misc.password1.copy'|trans }}" + "\n\n" + "{{ config.misc.password.text|raw }}") ;
+		});
+	</script>
+	<script type="text/javascript" src="{{ asset('js/bootstrap-checkbox.min.js') }}"></script>
+	<script type="text/javascript">
+		$(':checkbox').checkboxpicker();
+	</script>
+{% endblock javascripts %}
