--- a/src/Busybee/HomeBundle/Resources/views/Menu/sign-in-form.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Menu/sign-in-form.html.twig
@@ -17,14 +17,14 @@
 	{% elseif config.signin is null %}
 		&nbsp;
 	{% elseif config.signin and is_granted('ROLE_USER') %}
-		<form class="navbar-form navbar-right">
-			<div class="form-group">
-				{% if is_granted('ROLE_PREVIOUS_ADMIN') %}
-					<a class="btn btn-info" href="{{ path('home_page', {'_switch_user': '_exit'}) }}" role="button">{{ 'Exit Impersonation of'|trans }}: {{ app.user.username }}</a>
-				{% endif %}
-				<a class="btn btn-danger" href="{{ path('busybee_security_logout') }}" role="button">{{ 'Sign Out'|trans }}</a>
-			</div>
-		</form>
+		<ul class="nav navbar-nav navbar-right">
+			<li class="dropdown">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ app.user.formatName }}<span class="caret"></span></a>
+				<ul class="dropdown-menu">
+					<li><a href="{{ path('busybee_security_logout') }}" class="btn btn-danger" role="button" >{{ 'Sign Out'|trans }}</a></li> 
+				</ul>
+			</li>
+		</ul>
 	{% endif %}
 {% endif %}
 
