--- a/src/Busybee/SecurityBundle/Resources/views/User/reset.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/reset.html.twig
@@ -1,12 +1,20 @@
-{% extends "BusybeeSecurityBundle::layout.html.twig" %}
+{# src/General/SecurityBundle/Resources/views/User/reset.html.twig #}
+{% extends "BusybeeHomeBundle:Default:index.html.twig" %}
+
 
 {% trans_default_domain 'BusybeeSecurityBundle' %}
+
+{% block stylesheets %}
+{{ parent() }}
+	<link href="{{ asset('css/glyphicons.css') }}" type="text/css" rel="stylesheet" />
+{% endblock stylesheets %}
+
+
 {% block title %}{{ parent() }}{{ 'user.reset.title'|trans }}{% endblock title %}
-{% block titleBlock %}
-<div class="jumbotron">
-	<h1>{{ 'user.reset.title'|trans }}</h1>
-</div>
-{% endblock titleBlock %}
-{% block SecurityBundleContent %}
+{% block headerTitle %}{{ 'user.reset.title'|trans }}{% endblock headerTitle %}
+{% block headerLead %}{% endblock headerLead %}
+
+
+{% block contentContainer %}
 {% include "BusybeeSecurityBundle:User:reset_content.html.twig" %}
-{% endblock SecurityBundleContent %}
+{% endblock contentContainer %}
