--- a/src/Busybee/SecurityBundle/Resources/views/User/reset_content.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/reset_content.html.twig
@@ -1,18 +1,27 @@
 {% trans_default_domain 'BusybeeSecurityBundle' %}
 
 
-
-<div class="row marketing">
-	<div class="col-lg-12">
-
-		{{ form_start(form) }}
-			<div class="well row">
-				{{form_row(form.plainPassword) }}
+{{ form_start(form) }}
+	<div id="form_body" class="container-fluid">
+		<div class="row">
+			<div class="col-sm-6 ">
+				<div class="well row form-group">
+					{{form_row(form.plainPassword.first) }}
+				</div>
 			</div>
-			<div class="well row text-center">
-				{{form_widget(form.save) }}
-				{{form_widget(form.cancel) }}
+			<div class="col-sm-6 ">
+				<div class="well row form-group">
+					{{form_row(form.plainPassword.second) }}
+				</div>
 			</div>
-		{{form_end(form) }}
+		</div>
+		<div class="row ">
+			<div class="col-sm-6 col-sm-offset-6">
+				<div class="well row text-right form-group">
+					{{form_widget(form.save) }}
+					{{form_widget(form.cancel) }}
+				</div>
+			</div>
+		</div>
 	</div>
-</div>
+{{form_end(form) }}
