--- a/src/Busybee/SecurityBundle/Resources/views/User/register.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/register.html.twig
@@ -22,5 +22,5 @@
 
 {% block javascripts %}
 {{parent() }}
-{% include "BusybeeDisplayBundle:Form:initAjaxForm.html.twig" %}
+{% include "BusybeeHomeBundle:Form:initAjaxForm.html.twig" %}
 {% endblock javascripts %}
