--- a/src/Busybee/SecurityBundle/Resources/views/layout.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/layout.html.twig
@@ -1,5 +1,5 @@
 {# src/General/SecurityBundle/Resources/views/layout.html.twig #}
-{% extends "BusybeeDisplayBundle:Bootstrap:jumbotron-narrow.html.twig" %}
+{% extends "BusybeeHomeBundle:Bootstrap:jumbotron-narrow.html.twig" %}
 
 {% trans_default_domain 'BusybeeSecurityBundle' %}
 
