Install Script Repair

--- a/src/Busybee/HomeBundle/Resources/views/Default/index.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Default/index.html.twig
@@ -43,6 +43,9 @@
     </div> <!-- /container -->
 
 
-{{ include('BusybeeHomeBundle:Default:scripts.html.twig') }}
+{% block javascripts %}
+	{% include "BusybeeHomeBundle:Default:scripts.html.twig" %}
+{% endblock javascripts %}
+
 </body>
 </html>
