--- a/src/Busybee/HomeBundle/Resources/views/Default/template.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Default/template.html.twig
@@ -67,7 +67,11 @@
     </div> <!-- /container -->
 
 
-{{ include('BusybeeHomeBundle:Default:scripts.html.twig') }}
+
+{% block javascripts %}
+	{% include "BusybeeHomeBundle:Default:scripts.html.twig" %}
+{% endblock javascripts %}
+
 
 </body>
 </html>
